chore: upgrade to java 21 and quarkus 3.23.0